log
Wed, Mar 19, 2025 11:05:50 PM: 
 tests:  1|4
total_score: 10/70
3f6cb15
Fri, Mar 21, 2025  6:03:43 PM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:52:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, num);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
27519db
Fri, Mar 21, 2025  6:19:16 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8a49133
Fri, Mar 21, 2025  8:29:56 PM: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|4
total_score: 10/70
9ec4a05
Fri, Mar 21, 2025  8:31:28 PM: 
 exercises.c | 31 +++++++++++++++++++++++++++++--
 1 file changed, 29 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
7e55e43
